--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,26 +7,26 @@ on:
     branches: [main]
 
 jobs:
-  # quality:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
+  quality:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-  #     - uses: oven-sh/setup-bun@v2
-  #       with:
-  #         bun-version: latest
+      - uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
 
-  #     - name: Install dependencies
-  #       run: bun install
+      - name: Install dependencies
+        run: bun install
 
-  #     # - name: Lint
-  #     #   run: bun run lint
+      - name: Lint
+        run: bun run lint
 
-  #     - name: Type check
-  #       run: bun run typecheck
+      - name: Type check
+        run: bun run typecheck
 
-  #     - name: Unit tests
-  #       run: bun run test:unit
+      - name: Unit tests
+        run: bun run test:unit
 
   e2e:
     runs-on: ubuntu-latest
@@ -57,7 +57,7 @@ jobs:
           retention-days: 30
 
   deploy:
-    # needs: [quality, e2e]
+    needs: [quality, e2e]
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     permissions:
