--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "@types/three": "^0.182.0",
+    "@typescript-eslint/parser": "^8.53.1",
     "eslint": "^9.39.2",
+    "eslint-plugin-astro": "^1.5.0",
     "happy-dom": "^20.3.3",
     "prettier": "^3.8.0",
     "prettier-plugin-astro": "^0.14.1",
