--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:unit:watch": "vitest",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
-    "test": "bun run test:unit && bun run test:e2e"
+    "test": "vitest run"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
