--- a/.github/workflows/preview-deploy.yml
+++ b/.github/workflows/preview-deploy.yml
@@ -12,46 +12,50 @@ jobs:
       contents: write
       pull-requests: write
     steps:
-      - uses: actions/checkout@v4
+    - name: Sanitize branch name
+      id: branch
+      run: echo "name=$(echo '${{ github.head_ref }}' | sed 's/[^a-zA-Z0-9-]/-/g')" >> "$GITHUB_OUTPUT"
 
-      - uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
+    - uses: actions/checkout@v4
 
-      - name: Install dependencies
-        run: bun install
+    - uses: oven-sh/setup-bun@v2
+      with:
+        bun-version: latest
 
-      - name: Build preview
-        run: bun run build
-        env:
-          PREVIEW_BASE: /pr-${{ github.event.pull_request.number }}
+    - name: Install dependencies
+      run: bun install
 
-      - name: Deploy preview to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-          destination_dir: pr-${{ github.event.pull_request.number }}
-          keep_files: true
+    - name: Build preview
+      run: bun run build
+      env:
+        PREVIEW_BASE: /preview-${{ steps.branch.outputs.name }}
 
-      - name: Find existing comment
-        uses: peter-evans/find-comment@v3
-        id: find-comment
-        with:
-          issue-number: ${{ github.event.pull_request.number }}
-          comment-author: github-actions[bot]
-          body-includes: "<!-- preview-deploy -->"
+    - name: Deploy preview to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v4
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist
+        destination_dir: preview-${{ steps.branch.outputs.name }}
+        keep_files: true
 
-      - name: Create or update comment
-        uses: peter-evans/create-or-update-comment@v4
-        with:
-          comment-id: ${{ steps.find-comment.outputs.comment-id }}
-          issue-number: ${{ github.event.pull_request.number }}
-          edit-mode: replace
-          body: |
-            <!-- preview-deploy -->
-            🔗 **Preview deploy ready!**
+    - name: Find existing comment
+      uses: peter-evans/find-comment@v3
+      id: find-comment
+      with:
+        issue-number: ${{ github.event.pull_request.number }}
+        comment-author: github-actions[bot]
+        body-includes: "<!-- preview-deploy -->"
 
-            https://s33g.dev/pr-${{ github.event.pull_request.number }}/
+    - name: Create or update comment
+      uses: peter-evans/create-or-update-comment@v4
+      with:
+        comment-id: ${{ steps.find-comment.outputs.comment-id }}
+        issue-number: ${{ github.event.pull_request.number }}
+        edit-mode: replace
+        body: |
+          <!-- preview-deploy -->
+          🔗 **Preview deploy ready!**
 
-            _Updated: ${{ github.event.pull_request.head.sha }}_
+          https://s33g.uk/preview-${{ steps.branch.outputs.name }}/
+
+          _Updated: ${{ github.event.pull_request.head.sha }}_
